--- a/CAShapeLayerExample/CAShapeLayerExample/Info.plist
+++ b/CAShapeLayerExample/CAShapeLayerExample/Info.plist
@@ -23,7 +23,7 @@
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
-	<string>AnimatedShape</string>
+	<string>Shapes</string>
 	<key>UIRequiredDeviceCapabilities</key>
 	<array>
 		<string>armv7</string>
